@@ -1,2 +1,2 @@
 
-print(RcppToml:::.sort(RcppToml::tomlparse("bool_datetime.toml")))
+print(RcppToml::tomlparse("bool_datetime.toml"))
