@@ -16,45 +16,24 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > 
-> print(RcppToml:::.sort(RcppToml::tomlparse("float.toml")))
-$float
-$float$both
-$float$both$key
-[1] 6.626e-34
-
-
-$float$exponent
-$float$exponent$key1
-[1] 5e+22
-
-$float$exponent$key2
-[1] 1e+06
-
-$float$exponent$key3
-[1] -0.02
-
-
-$float$fractional
-$float$fractional$key1
-[1] 1
-
-$float$fractional$key2
-[1] 3.1415
-
-$float$fractional$key3
-[1] -0.01
-
-
-$float$underscores
-$float$underscores$key1
-[1] 9224617
-
-$float$underscores$key2
-[1] Inf
-
-
-
+> print(RcppToml::tomlparse("float.toml"))
+List of 1
+ $ float:List of 4
+  ..$ both       :List of 1
+  .. ..$ key: num 6.63e-34
+  ..$ exponent   :List of 3
+  .. ..$ key1: num 5e+22
+  .. ..$ key2: num 1e+06
+  .. ..$ key3: num -0.02
+  ..$ fractional :List of 3
+  .. ..$ key1: num 1
+  .. ..$ key2: num 3.14
+  .. ..$ key3: num -0.01
+  ..$ underscores:List of 2
+  .. ..$ key1: num 9224617
+  .. ..$ key2: num Inf
+NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.345   0.024   0.355 
+  0.339   0.020   0.349 
