@@ -1,2 +1,2 @@
 
-print(RcppToml:::.sort(RcppToml::tomlparse("integer.toml")))
+print(RcppToml::tomlparse("integer.toml"))
