@@ -1,7 +1,7 @@
 
-R version 3.1.3 (2015-03-09) -- "Smooth Sidewalk"
+R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
 Copyright (C) 2015 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -17,44 +17,24 @@ Type 'q()' to quit R.
 
 > 
 > print(RcppToml::tomlparse("tables.toml"))
-$table
-$table$key
-[1] "value"
-
-$table$subtable
-$table$subtable$key
-[1] "another value"
-
-
-$table$inline
-$table$inline$name
-$table$inline$name$first
-[1] "Tom"
-
-$table$inline$name$last
-[1] "Preston-Werner"
-
-
-$table$inline$point
-$table$inline$point$x
-[1] 1
-
-$table$inline$point$y
-[1] 2
-
-
-
-
-$x
-$x$y
-$x$y$z
-$x$y$z$w
-list()
-
-
-
-
+List of 2
+ $ table:List of 3
+  ..$ inline  :List of 2
+  .. ..$ name :List of 2
+  .. .. ..$ first: chr "Tom"
+  .. .. ..$ last : chr "Preston-Werner"
+  .. ..$ point:List of 2
+  .. .. ..$ x: int 1
+  .. .. ..$ y: int 2
+  ..$ key     : chr "value"
+  ..$ subtable:List of 1
+  .. ..$ key: chr "another value"
+ $ x    :List of 1
+  ..$ y:List of 1
+  .. ..$ z:List of 1
+  .. .. ..$ w: list()
+NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.480   0.444   0.450 
+  0.339   0.024   0.347 
